# pc-filtering

./: .gitattributes  .gitignore  LCC  ML_Commands.txt  README.md  Stuff.txt
BinGenerator-v2.1.0-WIN/: .gitignore  config.txt  execution_script.py
COGSConverter/: .gitignore  CMakeLists.txt  COGSConverter.sln  COGSConverter.vcxproj  COGSConverter.vcxproj.filters
COGSConverter/SkeletexLibs/include/COGS/: PointCloud.h  Scan.h
COGSConverter/SkeletexLibs/include/COGS/io/: DataBlock.h  DataBlockImporter.h
COGSConverter/SkeletexLibs/include/utils/: CMakeLists.txt  Filesystem.h  UProgress.h  Ulog.h
COGSConverter/SkeletexLibs/lib/Release/: GEOM.lib
COGSConverter/SourceFiles/: COGSConverter.cpp  DataFormatter.cpp  ImageGenerator.cpp
COGSConverter/include/: FormattingUtilities.h  PCDFormatter.h  PointCleanNetFormatter.h  ScanBoxes.h  ScanFormatter.h  ScanImager.h  ScanSegmentation.h  ScanTabler.h  XYZFormatter.h
COGSConverter/libs/include/COGS/: CMakeLists.txt  Frustum.h  Image.h  ScalePreservingTransform.h  Scan.h  ScanCameraParams.h  Version.h
COGSConverter/libs/include/GEOM/: CMakeLists.txt  Geometry.h
COGSConverter/libs/include/Utils/: AtomicQueue.h  CMakeLists.txt  CallbackTimer.h  ConcurrentBinding.h  EnumFlags.h  ExtCEGUI.h  ExtGLM.h  Functional.h  IniParser.h  IntrinsicParams.h  LicenseChecker.h  Ulog.h
COGSConverter/libs/lib/Release/: COGS_msvc141_v0.1.0.lib  GEOM_msvc141_v0.1.0.lib  Utils_msvc141_v0.1.0.lib
COGSConverter/src/: COGSConverter.cpp  FormattingUtilities.cpp  PCDFormatter.cpp  PointCleanNetFormatter.cpp  ScanBoxes.cpp  ScanFormatter.cpp  ScanImager.cpp  ScanSegmentation.cpp  XYZFormatter.cpp
ClionCC/: .gitignore  CMakeLists.txt  COGSConverter.cpp  DataFormatter.cpp  DataFormatter.h  ImageGenerator.cpp  ImageGenerator.h  PointCleanNetFormatter.cpp  PointCleanNetFormatter.h  PointFeatures.h  README.md  TrimValues.h
ClionCC/SkeletexLibs/include/COGS/: AabbHierarchy.h  Armature.h  Bone.h  BoneTransform.h  CMakeLists.txt  Color.h  Exporter.h  KdTree.h  Mesh.h  MetaData.h  MetaDataSerializer.h  PointCloud.h  Skeleton.h  SkeletonAction.h  Version.h
ClionCC/SkeletexLibs/include/COGS/io/: DataBlock.h  DataBlockImporter.h
ClionCC/SkeletexLibs/include/GEOM/: CMakeLists.txt  Constructors.h  Export.h  Geometry.h  Meshes.h  Remapping.h  Version.h
ClionCC/SkeletexLibs/include/Utils/: ConcurrentBinding.h  Config.h  ExtGLM.h  ExtSTD.h  Filesystem.h  IniParser.h  IntrinsicParams.h  Time.h
ClionCC/SkeletexLibs/include/utils/: AtomicQueue.h  Config.h  Exceptions.h  Filesystem.h  GeometryStructures.h  Property.h  Statistics.h
DetectionPrepare/: prepare.py  visualize.py
Documents/: Pipeline.drawio
FCNFilter/: .gitignore  activation.py  baseline.py  generator.py  history.py  inference.py  losses.py  model.py  prepare.py  train.py  weights.h5  weights.keras  weights.keras2  weights.keras3  weights.keras4  weights.keras5  weights.keras6
FCNSegment/: .gitignore  generator.py  inference.py  model.py  postprocess.py  prepare.py  train.py  weights.keras
Hiro Viewer 0.0.1/: hirolook.json
Jupyter Project/: Approach 1.ipynb  Project.ipynb
Model/: .gitignore  464.csv  466.csv  BasicModel.py  LinearModel.py  PerceptronModel.py  TruthFileChecker.py  apple_01_truth.csv
Models/: .gitignore  BasicModel.py  DistanceTest.py  LinearModel.py
Notebooks/: PlaidML_Bench.ipynb  Tensorflow_MultiGPU.ipynb  VGG_PlaidML_Bench.ipynb
PCFiltering/: .gitignore  PCFiltering.sln  PCFiltering.vcxproj  PCFiltering.vcxproj.filters
PCFiltering/SkeletexLibs/include/HIRO/: API.h  ArrayPanel.h  CMakeLists.txt  Camera.h  DataId.h  DataInstance.h  DataUnit.h  Debugger.h  Exportable.h  FileStorage.h  Gadget.h  GuiGenerator.h  GuiPanel.h  GuiTypes.h  HIRO.h  Input.h  Resource.h  ResourceId.h  StatusIcon.h  Version.h
PCFiltering/SkeletexLibs/include/HIRO/gui/: GuiGenerator.h  GuiHelpers.h  GuiTypes.h
PCFiltering/SkeletexLibs/include/HIRO/modules/: CMakeLists.txt  CameraAnimInstance.h  CameraAnimUnit.h  GeometryResource.h  GeometryUnit.h  GuiDataUnit.h  GuiResource.h  ImageResource.h  MeshResource.h  MeshUnit.h  PointCloudResource.h  PointCloudUnit.h  ScanResource.h  SkeletonResource.h  SkeletonUnit.h  SkinnedMeshUnit.h  TextureResource.h  TextureUnit.h
PCFiltering/SkeletexLibs/include/HIRO/widgets/: ArrayPanel.h  CMakeLists.txt  Combobox.h  Editbox.h  ListboxTextItem.h  StatusIcon.h
PLYModel/: ReadPLY.py
UbuntuCC/: .gitignore  COGSConverter.cpp  ImageGenerator.h
(+734 files in other folders)
